--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@
       </section>
 
       <section class="container-benefits">
-        +2
         <div class="container">
           <h2 class="visually-hidden">Прихований заголовок</h2>
 
@@ -209,11 +208,13 @@
           <ul class="team-menu">
             <li class="list-team">
               <img
-                src="./images/Team-Card-1.jpg"
+                src="./images/guerrero1x.jpg"
+                srcset="./images/guerrero1x.jpg 1x, ./images/guerrero2x.jpg 2x"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
               />
+
               <div class="team-name">
                 <h3 class="subtitle-team">Mark Guerrero</h3>
                 <p class="text-subtitle-team">Product Designer</p>
@@ -269,8 +270,9 @@
 
             <li class="list-team">
               <img
-                src="./images/Team-Card-2.jpg"
+                src="./images/ford1x.jpg"
                 alt="Tom Ford"
+                srcset="./images/ford1x.jpg 1x, ./images/ford2x.jpg 2x"
                 width="264"
                 height="260"
               />
@@ -327,8 +329,9 @@
             </li>
             <li class="list-team">
               <img
-                src="./images/Team-Card-3.jpg"
+                src="./images/garcia1x.jpg"
                 alt="Camila Garcia"
+                srcset="./images/garcia1x.jpg 1x, ./images/garcia2x.jpg 2x"
                 width="264"
                 height="260"
               />
@@ -385,8 +388,9 @@
             </li>
             <li class="list-team">
               <img
-                src="./images/Team-Card-4.jpg"
+                src="./images/wilson1x.jpg"
                 alt="Daniel Wilson"
+                srcset="./images/wilson1x.jpg 1x, ./images/wilson2x.jpg 2x"
                 width="264"
                 height="260"
               />
@@ -446,7 +450,7 @@
       </section>
 
       <section class="portfolio">
-        <div class="container">
+        <div class="container portfolio-container">
           <h2 class="title-portfolio">Our Portfolio</h2>
           <ul class="menu-portfolio">
             <li class="set">
@@ -655,7 +659,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="btn-modal" type="button">
           <svg class="btn-model-icon" width="8" height="8">
@@ -731,10 +735,12 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a class="checkbox-link" href="" target="_blank"
-                >Privacy Policy</a
-              >
+              <span
+                >I accept the terms and conditions of the
+                <a class="checkbox-link" href="" target="_blank"
+                  >Privacy Policy</a
+                >
+              </span>
             </label>
           </div>
           <button class="btn-modal-submit" type="submit">Send</button>
