--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
           <address>
             <ul class="mobile-menu-address">
               <li>
+                <a class="mobile-menu-address-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11
+                </a>
+              </li>
+              <li>
                 <a
                   class="mobile-menu-address-link"
                   href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a class="mobile-menu-address-link" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
+                  >info@devstudio.com
+                </a>
               </li>
             </ul>
           </address>
@@ -457,6 +457,10 @@
               <div class="div-box">
                 <img
                   src="./images/portfolio-1.jpg"
+                  srcset="
+                    ./images/portfolio-1.jpg    1x,
+                    ./images/portfolio-1@2x.jpg 2x
+                  "
                   alt="Banking App"
                   width="360"
                   height="300"
@@ -477,6 +481,10 @@
               <div class="div-box">
                 <img
                   src="./images/portfolio-2.jpg"
+                  srcset="
+                    ./images/portfolio-2.jpg    1x,
+                    ./images/portfolio-2@2x.jpg 2x
+                  "
                   alt="Cashless Payment"
                   width="360"
                   height="300"
@@ -497,6 +505,8 @@
               <div class="div-box">
                 <img
                   src="./images/portfolio-3.jpg"
+                  scrset="./images/portfolio-3.jpg    1x, 
+                          ./images/portfolio-3@2x.jpg 2x"
                   alt="Meditation App"
                   width="360"
                   height="300"
@@ -517,6 +527,8 @@
               <div class="div-box">
                 <img
                   src="./images/portfolio-4.jpg"
+                  scrset="./images/portfolio-4.jpg    1x,
+                          ./images/portfolio-4q2x.jpg 2x"
                   alt="Taxi Service"
                   width="360"
                   height="300"
@@ -537,6 +549,8 @@
               <div class="div-box">
                 <img
                   src="./images/portfolio-5.jpg"
+                  scrset="./images/portfolio-5.jpg   1x, 
+                         ./images/portfolio-5@2x.jpg 2x"
                   alt="Screen Illustrations"
                   width="360"
                   height="300"
@@ -557,6 +571,10 @@
               <div class="div-box">
                 <img
                   src="./images/portfolio-6.jpg"
+                  srcset="
+                    ./images/portfolio-6.jpg    1x,
+                    ./images/portfolio-6@2x.jpg 2x
+                  "
                   alt="Online Courses"
                   width="360"
                   height="300"
